--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         <button id="btn-clean">Clear</button>
       </div>
     </section>
-    <div class="div-loader">
-      <span class="loader"></span>
-    </div>
-    <div class="container__cards"></div>
-  </body>
+      <div class="container__cards" id="container">
+        <span class="loader" id="loader">Cargando...</span>
+      </div>
+      
+      <script src="./JS/script.js"></script>
+      </body>
 </html>
