--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <span class="loader" id="loader">Cargando...</span>
       </div>
       
+     <footer>Made by Melisa Moreno - 2022</footer>
+
+
+
       <script src="./JS/script.js"></script>
-      </body>
+    </body>
 </html>
