--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </select>
 
         <button id="btn-search">Search</button>
-        <button id="btn-clean">Clear</button>
+        <button id="btn-clear">Clear</button>
       </div>
     </section>
       <div class="container__cards" id="container">
@@ -57,10 +57,10 @@
       </form>
 
    <footer>Made by Melisa Moreno - 2022</footer>
-      <script src="./JS/script.js"></script>
-      <script src="./JS/script2.js"></script>
+   <script src="./JS/script.js"></script>
+   <script src="./JS/script2.js"></script>
       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     </body>
-   
+
 </html>
