--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </section>
       <div class="container__cards" id="container">
-        <div class="leap-frog" id="loader">
+      <div class="leap-frog" id="loader">
           <div class="leap-frog__dot"></div>
           <div class="leap-frog__dot"></div>
           <div class="leap-frog__dot"></div>
@@ -92,7 +92,7 @@
       <div class="alert-success" id="alert-success">
         <h2>Success!</h2>
         <div class="btn-form">
-          <button><a href="index.html">Ok</a></button>
+          <button id="ok"><a href="index.html">Ok</a></button>
           </div>
       </div>
       </div>
@@ -101,7 +101,7 @@
         <div class="alert-delete" id="alert-delete">
           <h2>This job was deleted</h2>
           <div class="btn-form">
-            <button><a href="index.html">Ok</a></button>
+            <button id="ok"><a href="index.html">Ok</a></button>
             </div>
         </div>
         </div>
@@ -110,7 +110,7 @@
           <div class="alert-edit" id="alert-edit">
             <h2>changes saved successfully</h2>
             <div class="btn-form">
-              <button><a href="index.html">Ok</a></button>
+              <button id="ok"><a href="index.html">Ok</a></button>
               </div>
           </div>
           </div>
