--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="welcome" id="welcome">
       <h1>Find your next job  here</h1>
       
-      <img src="assets\undraw_programmer_re_owql.svg">
+      <img src="assets/undraw_programmer_re_owql.svg" alt="image-computer">
     </section>
 
     <section class="main" id="main">
@@ -92,7 +92,7 @@
       <div class="alert-success" id="alert-success">
         <h2>Success!</h2>
         <div class="btn-form">
-          <button id="ok"><a href="index.html">Ok</a></button>
+          <button><a href="index.html">Ok</a></button>
           </div>
       </div>
       </div>
@@ -101,7 +101,7 @@
         <div class="alert-delete" id="alert-delete">
           <h2>This job was deleted</h2>
           <div class="btn-form">
-            <button id="ok"><a href="index.html">Ok</a></button>
+            <button><a href="index.html">Ok</a></button>
             </div>
         </div>
         </div>
@@ -110,7 +110,7 @@
           <div class="alert-edit" id="alert-edit">
             <h2>changes saved successfully</h2>
             <div class="btn-form">
-              <button id="ok"><a href="index.html">Ok</a></button>
+              <button><a href="index.html">Ok</a></button>
               </div>
           </div>
           </div>
